@@ -1,5 +1,6 @@
 require("prototypes.custom-input")
 require("prototypes.font")
+require("prototypes.item")
 require("prototypes.shortcut")
 require("prototypes.sprite")
 require("prototypes.style")
