@@ -26,9 +26,16 @@ rb-show-internal-names=Show the internal prototype name of each object, instead 
 [shortcut-name]
 rb-toggle-gui=Recipe Book
 
+[item-name]
+rb-machine-blueprint=Temporary machine blueprint
+
+[item-description]
+rb-machine-blueprint=A temporary blueprint provided by the Recipe Book to quickly place a machine with a specific recipe. Cannot be kept in the inventory or saved to the blueprint library.
+
 [rb-gui]
 add-to-favorites=Add to favorites
 back-to=Back to __1__\nRight-click to go home
+click-to-get-blueprint=Click to get a blueprint.
 close-quick-reference=Close quick reference panel
 favorites=Favorites
 fluid=Fluid
@@ -62,8 +69,8 @@ search-by=Search by:
 search=Search
 settings=Settings
 technology=Technology
-unresearched=Unresearched
 unlocked-by=Unlocked by (__1__)
+unresearched=Unresearched
 view-details=View details
 
 [rb-message]
